# chemfish

./: .pre-commit-config.yaml  .travis.yml  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  README.md  codemeta.json  pyproject.toml  tox.ini
.github/workflows/: build.yml
chemfish/: __init__.py  cli.py  jupyter.py  quick.py  startup.py
chemfish/addons/: datasets.py
chemfish/analysis/: auto_analyses.py  auto_traces.py  db_stats.py  layouts.py  mandos_search.py  mandos_searches.py  phenosearch.py  phenosearches.py  quick.py  stim_vid_disp.py  stimuli_in_videos.py
chemfish/caches/: assay_caches.py  audio_caches.py  caching_wfs.py  datasets.py  sensor_caches.py  stim_caches.py  video_cache.py  video_caches.py  wf_caches.py
chemfish/calc/: audio_expansion.py  feature_interpolation.py  interpolation.py  roi_tools.py  stat_tools.py  waveform_embedding.py
chemfish/core/: __init__.py  _imports.py  _tools.py  _valar_tools.py  core_imports.py  data_generations.py  environment.py  magics.py  saveable.py  tools.py  valar_singleton.py  valar_tools.py  video_core.py
chemfish/factories/: concern_rules.py  well_frame_builders.py
chemfish/factories/caching/: assay_frame_cache.py  audio_stimulus_cache.py  cache_interfaces.py  caching_well_frame_builder.py  sensor_cache.py  stim_cache.py  video_cache.py  well_frame_cache.py
chemfish/loaders/: __init__.py  layout_randomizer.py  layouts.py  mass_batches.py
chemfish/lookups/: __init__.py  fuzzy.py  fuzzy_lookups.py  layout_lookups.py  layouts.py  lookups.py  main_lookups.py  mandos.py  mandos_lookups.py  submission_lookups.py  submission_tools.py  submissions.py  template_lookups.py  template_tools.py  templates.py
chemfish/ml/: __init__.py  accuracy_frames.py  classifier_factory.py  classifiers.py  comparisons.py  confusion_matrices.py  confusion_matrix_factory.py  decision_frames.py  deep.py  multi_trainers.py  spindle_frames.py  spindle_summaries.py  spindles.py  transformers.py  utils.py
chemfish/model/: __init__.py  app_frames.py  assay_frames.py  audio.py  aug_well_frames.py  cache_interfaces.py  case_control_comparisons.py  comp_iters.py  compound_names.py  concern_rules.py  concerns.py  features.py  metrics.py  plate_frames.py  responses.py  roi_tools.py  score_frames.py  sensor_names.py  sensors.py  stim_frames.py  treat_displayers.py  treatment_names.py  treatments.py  videos.py  waveforms.py  well_frames.py  well_namers.py  well_names.py  wf_builders.py  wf_tools.py
chemfish/namers/: well_namers.py
chemfish/resources/: example.chemfish.config  example.kale.config  jupyter_template.txt  kaleforge.yml  kalepoetry.yml
chemfish/resources/chem/: refs_few.lines  refs_more.lines  unimportant_substrings.lines.txt
chemfish/resources/core/: assay_prefixes.json  generations.json  sauron_generations.csv  solvents.json  stim_colors.json  stim_names.json  videos.json  videos.properties  wavelength_colors.json
chemfish/resources/hardware/: sensor_calibration.toml
chemfish/resources/styles/: basic.mplstyle  default.properties  douglas_preprint.viz.properties
chemfish/viz/: __init__.py  _internal_viz.py  _kvrc_utils.py  accuracy_plots.py  audio_plots.py  breakdown_plots.py  color_schemes.py  confusion_plots.py  fig_savers.py  figures.py  heatmaps.py  importance_plots.py  internal_viz.py  kvrc.py  kvrc_utils.py  matrix_annotator.py  response_plots.py  sensor_plots.py  smart_dimensions.py  spindle_plots.py  stim_plots.py  stimframe_plots.py  timeline_plots.py  timelines.py  trace_plots.py  traces.py  well_plots.py
chemfish/viz/utils/: _internal_viz.py  figures.py  kale_rc.py
docs/: conf.py  index.rst  requirements.txt
tests/: __init__.py  generate.py
tests/core/: __init__.py  test_environment.py  test_internal_tools.py  test_valar_tools.py
tests/model/: test_well_frame_builders.py  test_well_frames.py  test_wf_builders.py
tests/resources/: chemfish.config  kaletest-privileges.sql  kaletest-rows.sql  kaletest-schema.sql  testdb.sql  valar_config.json
