[metadata]
description-file = "README.md"

[build-system]
requires = ["poetry>=1.0", "coverage[toml]"]
build-backend = "poetry.masonry.api"


#########################################################################################
# Tyrannosaurus
#########################################################################################

[tool.tyrannosaurus.options]
align = true

[tool.tyrannosaurus.sources]
# use a literal value ('') or refer to a pyproject setting
# ${today} is the date you run it at, and ${now} is the datetime
status             = "'Development'"
date               = "'${today}'"
copyright          = "'Copyright ${today.year}'"
version            = "tool.poetry.version"
release            = "tool.poetry.version"
pyversions         = "tool.poetry.dependencies"
devdeps            = "tool.poetry.dev-dependencies"
linelength         = "tool.black.line-length"
authors = [
    "Douglas Myers-Turnbull <github:dmyersturnbull,orcid:0000-0003-3610-4808>",
]
maintainers = "tool.tyrannosaurus.sources.authors"
contributors = [
	"Chris S Ki <github:chriski777>",
	"Cole Helsell <github:chelsell,orcid:0000-0002-8869-3125>"
]

[tool.tyrannosuarus.paths]
recipe             = "'recipes/${name}/meta.yml'"
environment        = "'environment.yml'"

[tool.tyrannosaurus.targets]
# these are file and directory names, without filename extensions
pyproject    = true
init         = true
tox          = true
docs         = true
recipes      = true
environment  = true
license      = true
authors      = true
github       = true
travis       = true
dockerfile   = true
readme       = true
changelog    = true
citation     = true
codemeta     = true


#########################################################################################
# Poetry metadata
#########################################################################################

[tool.poetry]
name = "chemfish"
version = "0.1.0"
description = "Zebrafish behavioral profiling and visualization in Python."
include = [
    "README.md",
    "LICENSE.txt",
    "CHANGES.md"
]
authors = ["Douglas Myers-Turnbull"]
maintainers = ["Douglas Myers-Turnbull"]
license = "Apache-2.0"
readme = "README.md"
keywords = ['zebrafish', 'behavior', 'data science', 'bioinformatics', 'cheminformatics']
homepage = "https://github.com/dmyersturnbull/chemfish"
repository = "https://github.com/dmyersturnbull/chemfish"
documentation = "https://chemfish.readthedocs.io"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Natural Language :: English",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
	"Intended Audience :: Developers",
	"Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Cheminformatics",
	'Typing :: Typed'
]

[tool.poetry.urls]
CI = "https://travis-ci.org/dmyersturnbull/chemfish"
Issues = "https://github.com/dmyersturnbull/chemfish/issues"


#########################################################################################
# Poetry build & dependencies
#########################################################################################

[tool.poetry.scripts]
chemfish = "chemfish.cli:cli"


[tool.poetry.dependencies]
python                         = "^3.8"
typer                          = "^0.2"
cryptography                   = "^2.8"
cycler                         = "^0.10"
dill                           = "^0.3"
jsonpickle                     = "^1.3"
h5py                           = "^2.10"
imageio                        = "^2.8"
joblib                         = "^0.14"
matplotlib                     = "^3.2"
natsort                        = "^7.0"
numpy                          = "^1.18"
pandas                         = "^1.0"
pillow                         = "^7.0"
psutil                         = "^5.7"
PyMySQL                        = "^0.9"
requests                       = "^2.23"
scipy                          = "^1.4"
scikit-image                   = "^0.16"
scikit-learn                   = "^0.22"
seaborn                        = "^0.10"
cairosvg                       = "^2.4"
fuzzywuzzy                     = "^0.16"
graphviz                       = "^0.14"
humanfriendly                  = "^8.1"
tables                         = "^3.6"
pydub                          = "^0.23"
pyzmq                          = "^19.0"
tomlkit                        = "^0.6"
pubchempy                      = "^1.0"
imageio-ffmpeg                 = "^0.4"
scikit-video                   = "^1.1"
librosa                        = "^0.7"
clana                          = "^0.3"
peewee                         = "^3.13"
soundfile                      = "^0.10"
#ChemSpiPy                      = "^2.0"
#moviepy                        = "^1.0"
#chembl_webresource_client      = "^0.10"
#uniprot                        = "^1.3"
#rdkit                          = "^2020.03
#python-levenshtein             = {optional = true, version="^0.11"}
jupyterlab                     = "^2.0"
ipympl                         = "^0.5"
tensorflow-gpu                 = {optional = true, version = "^2.1"}
tensorflow-gpu-estimator       = {optional = true, version = "^2.1"}
tensorflow-datasets            = {optional = true, version = "^2.1"}
opencv-contrib-python-headless = {optional = true, version = "^4.2"}
decorateme                     = "^0.1"
typed-dfs                      = "^0.2"
#pocketutils                    = "^0.1"

[tool.poetry.dev-dependencies]
pre-commit               = "^2.3"
pytest                   = "^5.4"
coverage                 = {extras = ["toml"], version = "^5.1"}
pytest-cov               = "^2.8"
sphinx                   = "^3.0"
sphinx-autoapi           = "^1.3"
sphinx-rtd-theme         = "^0.4.3"
mypy                     = "^0.750"
flake8                   = "^3.7"
flake8-docstrings        = "^1.5"
black                    = "=19.10b0"
isort                    = "^4.3"
sphinx-autodoc-typehints = "^1.10"
xdoctest                 = "^0.12"
hypothesis               = "^5.10"
flake8-bandit            = "^2.1"
flake8-bugbear           = "^20.1"
coveralls                = "^2.0"
tyrannosaurus            = "^0.5"

[tool.poetry.extras]
# manually listed
docs    = ["sphinx", "sphinx-rtd-theme", "sphinx-autoapi"]
#notebook = ["jupyterlab", "ipympl"]
#deep = ["tensorflow-gpu", "tensorflow-gpu-estimator", "tensorflow-datasets", "opencv-contrib-python-headless"]

# auto-filled from dev-deps
dev     = [
		"tyrannosaurus",
        "pre-commit", "pytest", "coverage", "xdoctest", "hypothesis",
        "sphinx", "sphinx-autodoc-typehints", "sphinx-autoapi",
        "mypy",
        "flake8", "flake8-docstrings",
        "black", "isort",
        "flake8-bandit", "flake8-bugbear"
]



#########################################################################################
# Style checking
#########################################################################################

[tool.coverage.paths]
source = ["chemfish"]

[tool.coverage.run]
source = ["chemfish"]

[tool.coverage.report]
show_missing = true

[tool.black]
line-length = 100
target-version = ["py38"]

[tool.isort]
line_length = 100
[mypy]
check_untyped_defs = true
strict_optional = true

[pycodestyle]
max-line-length = 100
statistics = true

[pydocstyle]
# 212 and 213 contradict; 203 and 204 contradict; D302 is not relevant in Py3
ignore = ["D203", "D212", "D302"]
