[metadata]
description-file = "README.md"

[build-system]
requires = ["poetry>=1.0", "coverage[toml]"]
build-backend = "poetry.masonry.api"


#########################################################################################
# Tyrannosaurus
#########################################################################################

[tool.tyrannosaurus.options]
align = true

[tool.tyrannosaurus.sources]
# use a literal value ('') or refer to a pyproject setting
# ${today} is the date you run it at, and ${now} is the datetime
status             = "'Development'"
date               = "'${today}'"
copyright          = "'Copyright ${today.year}'"
version            = "tool.poetry.version"
release            = "tool.poetry.version"
pyversions         = "tool.poetry.dependencies"
devdeps            = "tool.poetry.dev-dependencies"
linelength         = "tool.black.line-length"
authors = [
    "Douglas Myers-Turnbull <github:dmyersturnbull,orcid:0000-0003-3610-4808>",
]
maintainers = "tool.tyrannosaurus.sources.authors"
contributors = [
	"Chris S Ki <github:chriski777>",
	"Cole Helsell <github:chelsell,orcid:0000-0002-8869-3125>"
]

[tool.tyrannosuarus.paths]
recipe             = "'recipes/${name}/meta.yml'"
environment        = "'environment.yml'"

[tool.tyrannosaurus.targets]
# these are file and directory names, without filename extensions
pyproject    = true
init         = true
tox          = true
docs         = true
recipes      = true
environment  = true
license      = true
authors      = true
github       = true
travis       = true
dockerfile   = true
readme       = true
changelog    = true
citation     = true
codemeta     = true


#########################################################################################
# Poetry metadata
#########################################################################################

[tool.poetry]
name = "chemfish"
version = "0.1.0"
description = "Zebrafish behavioral profiling and visualization in Python."
include = [
    "README.md",
    "LICENSE.txt",
    "CHANGES.md"
]
authors = ["Douglas Myers-Turnbull"]
maintainers = ["Douglas Myers-Turnbull"]
license = "Apache-2.0"
readme = "README.md"
keywords = ['zebrafish', 'behavior', 'data science', 'bioinformatics', 'cheminformatics']
homepage = "https://github.com/dmyersturnbull/chemfish"
repository = "https://github.com/dmyersturnbull/chemfish"
documentation = "https://chemfish.readthedocs.io"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Natural Language :: English",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
	"Intended Audience :: Developers",
	"Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Cheminformatics",
	'Typing :: Typed'
]

[tool.poetry.urls]
CI = "https://travis-ci.org/dmyersturnbull/chemfish"
Issues = "https://github.com/dmyersturnbull/chemfish/issues"


#########################################################################################
# Poetry build & dependencies
#########################################################################################

[tool.poetry.scripts]
chemfish = "chemfish.cli:cli"


[tool.poetry.dependencies]
python                         = ">=3.7, <4"
importlib-metadata             = "^1"
typer                          = ">=0.3, <1.0"
requests                       = "^2"
urllib3                        = {extras = ["secure"], version = "^1"}

cryptography                   = "^3"
cycler                         = ">=0.10, <1.0"
dill                           = "^0.3"
jsonpickle                     = "^1.4"
h5py                           = "^2.10"
imageio                        = "^2.9"
joblib                         = "^0.16"
matplotlib                     = ">=3.3, <4.0"
natsort                        = "^7"
numpy                          = "^1.18"
pandas                         = ">=1.1, <2.0"
pillow                         = "^7"
psutil                         = "^5"
PyMySQL                        = ">=0.10, <1.0"
scipy                          = ">=1.4, <2.0"
scikit-image                   = ">=0.17, <1.0"
scikit-learn                   = "^0.23"
seaborn                        = ">=0.10, <1.0"
cairosvg                       = "^2"
fuzzywuzzy                     = ">=0.18, <1.0"
graphviz                       = ">=0.14, <1.0"
humanfriendly                  = "^8"
tables                         = "^3"
pydub                          = ">=0.24, <1.0"
pyzmq                          = "^19"
imageio-ffmpeg                 = ">=0.4, <1.0"
scikit-video                   = "^1"
librosa                        = "^0.8"
clana                          = "^0.4"
peewee                         = "^3"
soundfile                      = ">=0.10, <1.0"
#ChemSpiPy                      = "^2.0"
#moviepy                        = "^1.0"
#chembl_webresource_client      = "^0.10"
#uniprot                        = "^1.3"
#rdkit                          = "^2020.03
#python-levenshtein             = {optional = true, version="^0.11"}
#jupyterlab                     = "^2"
#ipympl                         = ">=0.5, <1.0"
#tensorflow-gpu                 = {optional = true, version = "^2.3"}
#tensorflow-gpu-estimator       = {optional = true, version = "^2.3"}
#opencv-contrib-python-headless = {optional = true, version = "^4.3"}
decorateme                     = ">=0.1, <1.0"
typeddfs                       = ">=0.2, <1.0"
pocketutils                    = ">=0.1, <1.0"
valarpy = { git = "https://github.com/dmyersturnbull/valarpy.git" }

[tool.poetry.dev-dependencies]
pre-commit               = "^2"
pytest                   = "^6"
coverage                 = {extras = ["toml"], version = "^5"}
pytest-cov               = "^2"
sphinx                   = "^3"
sphinx-autoapi           = "^1"
sphinx-rtd-theme         = "^0"
flake8                   = "^3"
flake8-docstrings        = "^1"
black                    = "=19.10b0"
isort                    = "^5"
sphinx-autodoc-typehints = "^1"
hypothesis               = "^5"
flake8-bugbear           = "^20"
coveralls                = "^2"
tomlkit                  = ">=0.5, <1.0"

[tool.poetry.extras]
# manually listed
#notebook = ["jupyterlab", "ipympl"]
#deep = ["tensorflow-gpu", "tensorflow-gpu-estimator"]
# auto-filled from dev-deps
dev     = [
        "pre-commit", "pytest", "coverage", "pytest-cov", "hypothesis",
        "sphinx", "sphinx-autodoc-typehints", "sphinx-autoapi",
        "flake8", "flake8-docstrings",
        "black", "isort", "flake8-bugbear"
]


#########################################################################################
# Style checking
#########################################################################################

[tool.coverage.paths]
source = ["chemfish"]

[tool.coverage.run]
source = ["chemfish"]

[tool.coverage.report]
show_missing = true

[tool.black]
line-length = 100
target-version = ["py38"]

[tool.isort]
line_length = 100
[mypy]
check_untyped_defs = true
strict_optional = true

[pycodestyle]
max-line-length = 100
statistics = true

[pydocstyle]
# 212 and 213 contradict; 203 and 204 contradict; D302 is not relevant in Py3
ignore = ["D203", "D212", "D302"]
