[metadata]
description-file = "README.md"

[build-system]
requires = ["poetry>=1,<2", "coverage[toml]>=5,<6"]
build-backend = "poetry.masonry.api"


#########################################################################################
# Tyrannosaurus
#########################################################################################

[tool.tyrannosaurus.options]
align = true

[tool.tyrannosaurus.sources]
status             = "'Development'"
date               = "'${today}'"
copyright          = "'Copyright ${today.year}'"
version            = "tool.poetry.version"
release            = "tool.poetry.version"
pyversions         = "tool.poetry.dependencies"
devdeps            = "tool.poetry.dev-dependencies"
linelength         = "tool.black.line-length"
authors = [
    "Douglas Myers-Turnbull <github:dmyersturnbull,orcid:0000-0003-3610-4808>",
]
maintainers = "tool.tyrannosaurus.sources.authors"
contributors = [
	"Chris S Ki <github:chriski777>",
	"Cole Helsell <github:chelsell,orcid:0000-0002-8869-3125>"
]

[tool.tyrannosuarus.paths]
recipe             = "'recipes/${name}/meta.yml'"
environment        = "'environment.yml'"

[tool.tyrannosaurus.targets]
pyproject    = true
init         = true
tox          = true
docs         = true
recipes      = true
environment  = true
license      = true
authors      = true
github       = true
travis       = true
dockerfile   = true
readme       = true
changelog    = true
citation     = true
codemeta     = true


#########################################################################################
# Poetry metadata
#########################################################################################

[tool.poetry]
name = "chemfish"
version = "0.1.0"
description = "Zebrafish behavioral profiling and visualization in Python."
include = [
    "README.md",
    "LICENSE.txt",
    "CHANGES.md"
]
authors = ["Douglas Myers-Turnbull"]
maintainers = ["Douglas Myers-Turnbull"]
license = "Apache-2.0"
readme = "README.md"
keywords = ["zebrafish", "behavior", "data science", "bioinformatics", "cheminformatics"]
homepage = "https://github.com/dmyersturnbull/chemfish"
repository = "https://github.com/dmyersturnbull/chemfish"
documentation = "https://chemfish.readthedocs.io"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Natural Language :: English",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
	"Intended Audience :: Developers",
	"Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Cheminformatics",
	'Typing :: Typed'
]

[tool.poetry.urls]
CI = "https://github.com/dmyersturnbull/chemfish/actions"
Issues = "https://github.com/dmyersturnbull/chemfish/issues"


#########################################################################################
# Poetry build & dependencies
#########################################################################################

[tool.poetry.scripts]
chemfish = "chemfish.cli:cli"


[tool.poetry.dependencies]
python                         = ">=3.8, <4"
clana                          = "^0.4"
cycler                         = ">=0.10, <1.0"
fuzzywuzzy                     = ">=0.18, <1.0"
h5py                           = "^2.10"
joblib                         = "^0.16"
librosa                        = "^0.8"
matplotlib                     = ">=3.2, <3.3"
natsort                        = "^7"
numpy                          = "^1.19"
pandas                         = ">=1.1, <2.0"
peewee                         = ">=3.13, <4.0"
pillow                         = "^7"
pydub                          = ">=0.24, <1.0"
requests                       = "^2"
scipy                          = ">=1.5, <2.0"
seaborn                        = ">=0.10, <1.0"
scikit-learn                   = "^0.23"
soundfile                      = ">=0.10, <1.0"
statsmodels                    = ">=0.12, <1.0"
typer                          = ">=0.3, <1.0"

decorateme                     = ">=0.1.1, <1.0"
typeddfs                       = ">=0.3.0, <1.0"
# we're actually using "biochem" too, but we don't need any extra dependencies
#pocketutils                    = {version=">=0.3.1, <1.0", extras=["tools", "notebooks", "plotting"]}
pocketutils                    = {version=">=0.3.2, <1.0"}
valarpy                        = "^3.0"

python-levenshtein             = {optional = true, version="^0.12"}

#ipympl                         = {version=">=0.5, <1.0", optional=true}
#ipython                        = {version="^7", optional=true}
#ipywidgets                     = {version="^7", optional=true}
#jupyterlab                     = {version="^2", optional=true}
#pywin32                        = {version="227", optional=true, markers = "os_name == 'nt'"}
#pyzmq                          = {version="^19", optional=true}

#imageio-ffmpeg                 = {version=">=0.4, <1.0", optional=true}
#moviepy                        = {version="^1.0", optional=true}


[tool.poetry.dev-dependencies]
pre-commit               = "^2"
pytest                   = "^6"
coverage                 = {extras = ["toml"], version = "^5"}
pytest-cov               = "^2"
sphinx                   = "^3"
sphinx-autoapi           = "^1"
sphinx-rtd-theme         = "^0"
flake8                   = "^3"
flake8-docstrings        = "^1"
black                    = "=19.10b0"
isort                    = "^5"
hypothesis               = "^5"
flake8-bugbear           = "^20"
coveralls                = "^2"
tomlkit                  = ">=0.5, <1.0"

[tool.poetry.extras]
performance  = ["python-levenshtein"]
#notebook     = ["ipympl", "ipython", "ipywidgets", "jupyterlab", "pywin32", "pyzmq"]
#media        = ["imageio-ffmpeg", "librosa", "moviepy", "pydub"]
dev          = [
                "pre-commit", "black", "isort",
                "pytest", "coverage", "pytest-cov", "hypothesis",
                "sphinx", "sphinx-autoapi",
                "flake8", "flake8-docstrings", "flake8-bugbear"
]


#########################################################################################
# Style checking
#########################################################################################

[tool.coverage.paths]
source = ["chemfish"]

[tool.coverage.run]
source = ["chemfish"]

[tool.coverage.report]
show_missing = true

[tool.black]
line-length = 100
target-version = ["py38"]

[tool.isort]
line_length = 100

[mypy]
check_untyped_defs = true
strict_optional = true

[pycodestyle]
max-line-length = 100
statistics = true

[pydocstyle]
# 212 and 213 contradict; 203 and 204 contradict; D302 is not relevant in Py3
ignore = ["D203", "D212", "D302"]
